# soos-ci-analysis-python

./: .gitignore  LICENSE  README.md  azure-pipelines.yml  requirements.sha256  setup.cfg  setup.py  soos.SHA256
.github/: pull_request_template.md
.github/workflows/: codeql-analysis.yml  integration_tests.yml  main.yml  publish.yml  release.yml
examples/: awscodebuild.md  bamboo.md  circleci.md  codeship.md  gitlab.md  jenkins.md  teamcity.md  travisci.md
src/: packageaware.py
src/cli/: VERSION.txt  myshell.sh  requirements.sha256  requirements.txt  sca.py  soos.SHA256  soos.py  soos.sha256  soos_wrapper.sh  version.py
tests/: run_and_wait.py  tests.py
tests/manifests/composer/: composer.json  script.sh
tests/manifests/dart/: script.sh
tests/manifests/exclude_dirs/: script.sh
tests/manifests/exclude_files/: script.sh
tests/manifests/gemfile/: script.sh
tests/manifests/gradle/: script.sh
tests/manifests/maven/: script.sh
tests/manifests/no_issues/: package-lock.json  package.json  script.sh
tests/manifests/nuget/: packages.lock.json  script.sh
tests/manifests/rust/: script.sh
tests/manifests/sarif/: package-lock.json  package.json  script.sh
tests/manifests/sarif_report/: script.sh
tests/manifests/with_issues/: package-lock.json  package.json  script.sh
